# AnesBenmerzoug.github.io

./: .gitignore  .nojekyll  404.html  LICENSE  README.md  _quarto.yml  config.toml  index.html  index.qmd  index.xml  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: main.yml
about/: index.html
categories/: index.html  index.xml
content/: about.md  resume.md
content/notes/: _index.md  homomorphic-encryption.md  information-extraction.md  kmp-algorithm.md  tasks.md  viterbi-algorithm.md
content/posts/: bayesian-coffee-optimization.md  ecr-kubernetes-tagging.md  mlflow-model-versioning.md  model-versioning-with-mlflow.md  when-ecr-lifecycle-policies-are-not-enough.md
css/: coder.min.843ee18d510f7cb1bb49110db117b99ea65489c095d620a5d79ea71693478e77.css  custom.css
layouts/partials/: footer.html
layouts/shortcodes/: center.html  skill-item.html  skill-list.html
notes/: index.html  index.xml
posts/: _metadata.yml  index.html  index.qmd  index.xml
posts/ball-and-beam/: index.html  index.qmd
posts/bayesian-coffee-optimization/: index.md
posts/control-series/: index.html  index.qmd  index.xml
posts/ecr-kubernetes-tagging/: index.html
posts/llm-email-information-extaction/: enron_emails.yml  index.html  index.ipynb
posts/mlflow-model-versioning/: index.html
posts/model-versioning-with-mlflow/: index.html  index.qmd
posts/poetry-and-python-versions/: index.html  index.qmd
posts/python-and-poetry/: index.qmd
posts/rpi-tfluna-lidar/: index.html  index.qmd
resume/: index.html
tags/: index.html  index.xml
(+67 files in other folders)
