[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anesbenmerzoug-github-io"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "AnesBenmerzoug", email = "anes.benmerzoug@gmail.com" }]
dependencies = ["jupyter", "jupyter-cache", "ipykernel", "tqdm", "IPython"]

[tool.hatch.envs.llm_information_extraction]
dependencies = [
    "llama-cpp-python==0.3.2",
    "huggingface-hub==0.26.2",
    "pydantic==2.10.3",
    "seaborn==0.13.2",
    "pandas==2.2.3",
]
